plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'yeonjae'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

// 실행 가능한 JAR 생성 설정
bootJar {
	enabled = true
}

// 일반 JAR 파일 생성 비활성화
jar {
	enabled = false
}

// bootRun 태스크에 환경 변수 주입 (선택사항)
tasks.named('bootRun') {
	// .env 파일에서 환경 변수 로드
	if (file('.env').exists()) {
		file('.env').readLines().each { line ->
			if (line && !line.startsWith('#') && line.contains('=')) {
				def (key, value) = line.split('=', 2)
				if (key && value) {
					environment key.trim(), value.trim()
				}
			}
		}
	}

	// 또는 시스템 환경 변수 전달
	systemProperties = System.properties
}

// k6 부하테스트용 데이터 생성 Task
task runDataGenerator(type: JavaExec) {
	group = 'load-test'
	description = 'k6 부하테스트용 CSV 데이터 생성'
	mainClass = 'yeonjae.snapguide.controller.initData.LoadTestDataGenerator'
	classpath = sourceSets.main.runtimeClasspath

	doFirst {
		println '🚀 부하테스트용 CSV 데이터 생성 시작...'
	}

	doLast {
		println '✅ CSV 생성 완료!'
		println '📁 파일 위치: src/main/resources/load-test-data/'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
	// implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// 추가
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// OpenTelemetry for Spring Boot 3.x
	implementation 'io.micrometer:micrometer-registry-otlp'
	implementation 'io.opentelemetry:opentelemetry-api'
	implementation 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:2.2.0-alpha'

	// Logback JSON logging
	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'


    compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	 testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-inline:5.2.0' // static 메서드 mocking용

	// for handel metadata
	implementation 'com.drewnoakes:metadata-extractor:2.18.0'

	// 추가, test 롬복 사용
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// google maps api 용
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	//swagger
	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0')

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// oauth2.0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// Querydsl 추가
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// HEIC -> JPEG 변환용
	implementation 'org.im4java:im4java:1.4.0'

	// openCSV (오픈 데이터 가져온거 처리)
	implementation("com.opencsv:opencsv:5.9")
	implementation("com.fasterxml.jackson.core:jackson-databind")

	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	//postgreSQL
	implementation 'org.postgresql:postgresql:42.7.3'
	implementation 'org.hibernate:hibernate-spatial:6.4.4.Final' // PostGIS 지원을 위해 필요
	// implementation 'com.querydsl:querydsl-spatial'
	implementation 'org.locationtech.jts:jts-core:1.19.0' // JTS Geometry 라이브러리 추가, Point 타입 사용하기 위해서. jts는 공간 관련 기능을 제공하는 Java의 라이브러리이다.

	// 썸네일용
	implementation 'net.coobird:thumbnailator:0.4.14'

	// aws
	// Spring Cloud AWS BOM (Bill of Materials)
	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1")

	// AWS Parameter Store 사용을 위한 의존성
	implementation "io.awspring.cloud:spring-cloud-aws-starter-parameter-store"

	// aws amazonS3 객체는 이거?
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// (선택) Secrets Manager를 사용한다면 아래 의존성 추가
	// implementation "io.awspring.cloud:spring-cloud-aws-starter-secrets-manager"

	implementation 'org.apache.tika:tika-core:2.9.2' // Apache Tika , 파일확장자 검사용 특히 heic

	// TwelveMonkeys ImageIO 플러그인 추가 (HEIC, WebP 등 다양한 포맷 지원)
//	implementation('com.twelvemonkeys.imageio:imageio-heif:3.10.1')

	// Jackson - Java 8 날짜/시간 타입 지원 모듈
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// PWA Web Push (VAPID)
	implementation 'nl.martijndwars:web-push:5.1.1'
	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'

}

tasks.named('test') {
	useJUnitPlatform()
}
